# rust-clean

./: .travis.yml  Cargo.toml  LICENSE.TXT  Makefile  README.md
src/: main.rs
