[package]
name = "clean"
version = "1.0.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

description = "A temporary emacs file cleaner"
license = "Apache-2.0"
homepage = "https://github.com/GuillaumeGomez/rust-clean"
documentation = "https://github.com/GuillaumeGomez/rust-clean"

readme = "README.md"

keywords = ["emacs", "clean", "tmp", "temporary"]

[[bin]]
name = "clean"